[Luisa][51] Migrates project to Java 17